--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Noto+Serif+Bengali:wght@400;700&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Anish & Suvasree | Wedding Invitation</title>
+  <title>Anish & Suvasree | Reception Invitation</title>
 </head>
 
 <body>
